@@ -24,6 +24,9 @@
 		<okhttp3.version>3.14.7</okhttp3.version>
 		<fdk-extension.version>0.5.0</fdk-extension.version>
 		<fdk-client.version>1.3.9</fdk-client.version>
+		<maven.compiler.source>22</maven.compiler.source>
+		<maven.compiler.target>22</maven.compiler.target>
+		<net.bytebuddy.experimental>true</net.bytebuddy.experimental>
 	</properties>
 
 
@@ -132,6 +135,13 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Dnet.bytebuddy.experimental=true</argLine>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
